--- a/package.json
+++ b/package.json
@@ -21,7 +21,5 @@
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0"
   },
-  "dependencies": {
-    "jtabs": "^4.0.1"
-  }
+  "dependencies": {}
 }
