--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@glidejs/glide": "^3.4.1"
+  }
 }
