--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/ivantbv/restaurant-page/issues"
   },
-  "homepage": "https://github.com/ivantbv/restaurant-page#readme",
+  "homepage": "https://github.com/ivantbv/restaurant-page",
   "devDependencies": {
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0"
